Fix pinned message z-index

--- a/src/Components/ColumnMiddle/PinnedMessage.css
+++ b/src/Components/ColumnMiddle/PinnedMessage.css
@@ -6,7 +6,6 @@
  */
 
 .pinned-message {
-    z-index: 100;
     position: absolute;
     left: 0;
     top: 0;
